tests/miniJava/neg/004374_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public 0 int [] java ( ) { return 0 ; } }
